Fixed Logging for UniBoxClient. Fixed UniBoxGame classpath.

--- a/UniBoxClient/src/log4j.properties
+++ b/UniBoxClient/src/log4j.properties
@@ -1,4 +1,4 @@
-log4j.logger.UniBoxLogger=DEBUG, C, fileappender
+log4j.logger.UniBoxLogger=INFO, C, fileappender
  
 log4j.additivity.UniBoxLogger=false
 log4j.appender.C=org.apache.log4j.ConsoleAppender
