--- a/UniBoxGame/.classpath
+++ b/UniBoxGame/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/jre7/lib/jfxrt.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_45"/>
 	<classpathentry kind="lib" path="lib/UniBoxClient.jar"/>
+	<classpathentry kind="lib" path="lib/base64coder.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/UniBoxCore.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
