fixed comlink bug

--- a/UniBoxServer/WebContent/WEB-INF/config/server.properties
+++ b/UniBoxServer/WebContent/WEB-INF/config/server.properties
@@ -5,15 +5,15 @@ DB_NAME=unibox
 DB_DRIVER=com.mysql.jdbc.Driver
 DB_PROTOCOL=jdbc:mysql:
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=unibox
 
 !!! Logging Configuration !!!
 
-LOG_ASYNC_SESSIONS=true
-LOG_AUTHENTIFICATION=true
-LOG_COMMUNICATION=true
-LOG_DATABASE=true
-LOG_GAMEPOOL=true
-LOG_REQUEST_HEADER=true
-LOG_REQUESTED_URI=true
-LOG_THREADS=true
+LOG_ASYNC_SESSIONS=false
+LOG_AUTHENTIFICATION=false
+LOG_COMMUNICATION=false
+LOG_DATABASE=false
+LOG_GAMEPOOL=false
+LOG_REQUEST_HEADER=false
+LOG_REQUESTED_URI=false
+LOG_THREADS=false
